--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,8 @@ INSTALLATION
   3) Open up command line/Git Bash
   4) cd into the RubyIbis folder
   5) enter "rails s" into the console. 
-      a) it may ask you to install gems. if so, type in bundle install, wait for the gems to download, then type in "rails s"
+      a) it may ask you to install gems. if so, type in bundle install, 
+	  wait for the gems to download, then type in "rails s"
   6) In about 10-20 seconds, it should boot up
   7) Go to localhost:3000 to access
 
